- Added backtracking samples - Added kotlin RecursiveSamples - Added PrimeNrCalculator - Added CronUtilsTests - Updated dependencies - removed redundant files - replaced log4j by logback